Migrate gradle build to 8.1.1